grammar/XDocSyntaxParser.java
// Generated from /Users/takeshi/Documents/GitHub/xdoc-parser/grammar/XDocSyntaxParser.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class XDocSyntaxParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		NumberLiteral=1, IntegerLiteral=2, FloatingPointLiteral=3, BooleanLiteral=4, 
		CharacterLiteral=5, StringLiteral=6, NullLiteral=7, EXTENDS=8, ID=9, NEWLINE=10, 
		SPACE=11, TEXT_CONTENT=12, AT=13, PLUS=14, MINUS=15, STAR=16, FORWARD_SLASH=17, 
		COLON=18, PERIOD=19, COMMA=20, EQUAL=21, QUESTION=22, AMP=23, PIPE=24, 
		ARROW=25, EXCLAMATION=26, INLINE_TAG_START=27, BRACE_OPEN=28, BRACE_CLOSE=29, 
		PAREN_OPEN=30, PAREN_CLOSE=31, BRACKET_OPEN=32, BRACKET_CLOSE=33, LESSTHAN=34, 
		GREATERTHAN=35;
	public static final int
		RULE_documentation = 0, RULE_body = 1, RULE_whitespace = 2, RULE_annotations = 3, 
		RULE_tag = 4, RULE_tagName = 5, RULE_tagIdentifier = 6, RULE_propertyTagIdentifier = 7, 
		RULE_optionalTagIdentifier = 8, RULE_optionalTagOrIdentifier = 9, RULE_identifier = 10, 
		RULE_optionalIdentifier = 11, RULE_type = 12, RULE_lambdaType = 13, RULE_formalParameterSequence = 14, 
		RULE_parameter = 15, RULE_tupleType = 16, RULE_tupleTypeSequence = 17, 
		RULE_primaryType = 18, RULE_identifierOrKeyword = 19, RULE_keyword = 20, 
		RULE_parenthesizedType = 21, RULE_unaryType = 22, RULE_objectType = 23, 
		RULE_objectPairSequenceType = 24, RULE_objectPairType = 25, RULE_arrayType = 26, 
		RULE_notArrayType = 27, RULE_propertyIdentifier = 28, RULE_optionalIdentifierOrIdentifier = 29, 
		RULE_expression = 30, RULE_unaryExpression = 31, RULE_arrayExpression = 32, 
		RULE_objectExpression = 33, RULE_objectPairSequenceExpression = 34, RULE_objectPairExpression = 35, 
		RULE_lambdaExpression = 36, RULE_literalExpression = 37, RULE_parenthesizedExpression = 38, 
		RULE_description = 39, RULE_descriptionLine = 40, RULE_descriptionLineStart = 41, 
		RULE_descriptionText = 42, RULE_descriptionLineElement = 43, RULE_descriptionLineText = 44, 
		RULE_inlineTag = 45, RULE_inlineTagName = 46, RULE_inlineTagBody = 47, 
		RULE_braceExpression = 48, RULE_braceBody = 49, RULE_braceText = 50;
	public static final String[] ruleNames = {
		"documentation", "body", "whitespace", "annotations", "tag", "tagName", 
		"tagIdentifier", "propertyTagIdentifier", "optionalTagIdentifier", "optionalTagOrIdentifier", 
		"identifier", "optionalIdentifier", "type", "lambdaType", "formalParameterSequence", 
		"parameter", "tupleType", "tupleTypeSequence", "primaryType", "identifierOrKeyword", 
		"keyword", "parenthesizedType", "unaryType", "objectType", "objectPairSequenceType", 
		"objectPairType", "arrayType", "notArrayType", "propertyIdentifier", "optionalIdentifierOrIdentifier", 
		"expression", "unaryExpression", "arrayExpression", "objectExpression", 
		"objectPairSequenceExpression", "objectPairExpression", "lambdaExpression", 
		"literalExpression", "parenthesizedExpression", "description", "descriptionLine", 
		"descriptionLineStart", "descriptionText", "descriptionLineElement", "descriptionLineText", 
		"inlineTag", "inlineTagName", "inlineTagBody", "braceExpression", "braceBody", 
		"braceText"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, null, null, null, null, null, "'extends'", null, null, 
		null, null, "'@'", "'+'", "'-'", "'*'", "'/'", "':'", "'.'", "','", "'='", 
		"'?'", "'&'", "'|'", null, "'!'", "'{@'", "'{'", "'}'", "'('", "')'", 
		"'['", "']'", "'<'", "'>'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "NumberLiteral", "IntegerLiteral", "FloatingPointLiteral", "BooleanLiteral", 
		"CharacterLiteral", "StringLiteral", "NullLiteral", "EXTENDS", "ID", "NEWLINE", 
		"SPACE", "TEXT_CONTENT", "AT", "PLUS", "MINUS", "STAR", "FORWARD_SLASH", 
		"COLON", "PERIOD", "COMMA", "EQUAL", "QUESTION", "AMP", "PIPE", "ARROW", 
		"EXCLAMATION", "INLINE_TAG_START", "BRACE_OPEN", "BRACE_CLOSE", "PAREN_OPEN", 
		"PAREN_CLOSE", "BRACKET_OPEN", "BRACKET_CLOSE", "LESSTHAN", "GREATERTHAN"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "XDocSyntaxParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public XDocSyntaxParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class DocumentationContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(XDocSyntaxParser.EOF, 0); }
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(XDocSyntaxParser.NEWLINE, 0); }
		public DocumentationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_documentation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XDocSyntaxParserListener ) ((XDocSyntaxParserListener)listener).enterDocumentation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XDocSyntaxParserListener ) ((XDocSyntaxParserListener)listener).exitDocumentation(this);
		}
	}

	public final DocumentationContext documentation() throws RecognitionException {
		DocumentationContext _localctx = new DocumentationContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_documentation);
		int _la;
		try {
			setState(109);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EOF:
				enterOuterAlt(_localctx, 1);
				{
				setState(102);
				match(EOF);
				}
				break;
			case NEWLINE:
			case SPACE:
			case AT:
				enterOuterAlt(_localctx, 2);
				{
				setState(103);
				body();
				setState(105);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==NEWLINE) {
					{
					setState(104);
					match(NEWLINE);
					}
				}

				setState(107);
				match(EOF);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BodyContext extends ParserRuleContext {
		public AnnotationsContext annotations() {
			return getRuleContext(AnnotationsContext.class,0);
		}
		public List<WhitespaceContext> whitespace() {
			return getRuleContexts(WhitespaceContext.class);
		}
		public WhitespaceContext whitespace(int i) {
			return getRuleContext(WhitespaceContext.class,i);
		}
		public BodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XDocSyntaxParserListener ) ((XDocSyntaxParserListener)listener).enterBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XDocSyntaxParserListener ) ((XDocSyntaxParserListener)listener).exitBody(this);
		}
	}

	public final BodyContext body() throws RecognitionException {
		BodyContext _localctx = new BodyContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_body);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE || _la==SPACE) {
				{
				{
				setState(111);
				whitespace();
				}
				}
				setState(116);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(117);
			annotations();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhitespaceContext extends ParserRuleContext {
		public TerminalNode SPACE() { return getToken(XDocSyntaxParser.SPACE, 0); }
		public TerminalNode NEWLINE() { return getToken(XDocSyntaxParser.NEWLINE, 0); }
		public WhitespaceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whitespace; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XDocSyntaxParserListener ) ((XDocSyntaxParserListener)listener).enterWhitespace(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XDocSyntaxParserListener ) ((XDocSyntaxParserListener)listener).exitWhitespace(this);
		}
	}

	public final WhitespaceContext whitespace() throws RecognitionException {
		WhitespaceContext _localctx = new WhitespaceContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_whitespace);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			_la = _input.LA(1);
			if ( !(_la==NEWLINE || _la==SPACE) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AnnotationsContext extends ParserRuleContext {
		public List<TagContext> tag() {
			return getRuleContexts(TagContext.class);
		}
		public TagContext tag(int i) {
			return getRuleContext(TagContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(XDocSyntaxParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(XDocSyntaxParser.NEWLINE, i);
		}
		public AnnotationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_annotations; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XDocSyntaxParserListener ) ((XDocSyntaxParserListener)listener).enterAnnotations(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XDocSyntaxParserListener ) ((XDocSyntaxParserListener)listener).exitAnnotations(this);
		}
	}

	public final AnnotationsContext annotations() throws RecognitionException {
		AnnotationsContext _localctx = new AnnotationsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_annotations);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			tag();
			setState(126);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(122);
					match(NEWLINE);
					setState(123);
					tag();
					}
					} 
				}
				setState(128);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TagContext extends ParserRuleContext {
		public TagNameContext tagName() {
			return getRuleContext(TagNameContext.class,0);
		}
		public List<TerminalNode> SPACE() { return getTokens(XDocSyntaxParser.SPACE); }
		public TerminalNode SPACE(int i) {
			return getToken(XDocSyntaxParser.SPACE, i);
		}
		public TerminalNode MINUS() { return getToken(XDocSyntaxParser.MINUS, 0); }
		public DescriptionContext description() {
			return getRuleContext(DescriptionContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(XDocSyntaxParser.NEWLINE, 0); }
		public TagIdentifierContext tagIdentifier() {
			return getRuleContext(TagIdentifierContext.class,0);
		}
		public TerminalNode EQUAL() { return getToken(XDocSyntaxParser.EQUAL, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode COLON() { return getToken(XDocSyntaxParser.COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TagContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tag; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XDocSyntaxParserListener ) ((XDocSyntaxParserListener)listener).enterTag(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XDocSyntaxParserListener ) ((XDocSyntaxParserListener)listener).exitTag(this);
		}
	}

	public final TagContext tag() throws RecognitionException {
		TagContext _localctx = new TagContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_tag);
		int _la;
		try {
			setState(288);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,29,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(129);
				tagName();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(130);
				tagName();
				setState(131);
				match(SPACE);
				setState(133);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==NEWLINE) {
					{
					setState(132);
					match(NEWLINE);
					}
				}

				setState(135);
				match(MINUS);
				setState(136);
				match(SPACE);
				setState(137);
				description();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(139);
				tagName();
				setState(140);
				match(SPACE);
				setState(141);
				tagIdentifier();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(143);
				tagName();
				setState(144);
				match(SPACE);
				setState(145);
				tagIdentifier();
				setState(147);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SPACE) {
					{
					setState(146);
					match(SPACE);
					}
				}

				setState(149);
				match(EQUAL);
				setState(151);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SPACE) {
					{
					setState(150);
					match(SPACE);
					}
				}

				setState(153);
				expression(0);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(155);
				tagName();
				setState(156);
				match(SPACE);
				setState(157);
				tagIdentifier();
				setState(158);
				match(SPACE);
				setState(160);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==NEWLINE) {
					{
					setState(159);
					match(NEWLINE);
					}
				}

				setState(162);
				match(MINUS);
				setState(163);
				match(SPACE);
				setState(164);
				description();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(166);
				tagName();
				setState(167);
				match(SPACE);
				setState(168);
				tagIdentifier();
				setState(169);
				match(SPACE);
				setState(170);
				match(EQUAL);
				setState(172);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SPACE) {
					{
					setState(171);
					match(SPACE);
					}
				}

				setState(174);
				expression(0);
				setState(175);
				match(SPACE);
				setState(177);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==NEWLINE) {
					{
					setState(176);
					match(NEWLINE);
					}
				}

				setState(179);
				match(MINUS);
				setState(180);
				match(SPACE);
				setState(181);
				description();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(183);
				tagName();
				setState(184);
				match(SPACE);
				setState(185);
				tagIdentifier();
				setState(187);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SPACE) {
					{
					setState(186);
					match(SPACE);
					}
				}

				setState(189);
				match(COLON);
				setState(191);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SPACE) {
					{
					setState(190);
					match(SPACE);
					}
				}

				setState(193);
				type(0);
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(195);
				tagName();
				setState(196);
				match(SPACE);
				setState(197);
				tagIdentifier();
				setState(199);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SPACE) {
					{
					setState(198);
					match(SPACE);
					}
				}

				setState(201);
				match(COLON);
				setState(203);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SPACE) {
					{
					setState(202);
					match(SPACE);
					}
				}

				setState(205);
				type(0);
				setState(207);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SPACE) {
					{
					setState(206);
					match(SPACE);
					}
				}

				setState(209);
				match(EQUAL);
				setState(211);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SPACE) {
					{
					setState(210);
					match(SPACE);
					}
				}

				setState(213);
				expression(0);
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(215);
				tagName();
				setState(216);
				match(SPACE);
				setState(217);
				tagIdentifier();
				setState(219);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SPACE) {
					{
					setState(218);
					match(SPACE);
					}
				}

				setState(221);
				match(COLON);
				setState(223);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SPACE) {
					{
					setState(222);
					match(SPACE);
					}
				}

				setState(225);
				type(0);
				setState(226);
				match(SPACE);
				setState(228);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==NEWLINE) {
					{
					setState(227);
					match(NEWLINE);
					}
				}

				setState(230);
				match(MINUS);
				setState(231);
				match(SPACE);
				setState(232);
				description();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(234);
				tagName();
				setState(235);
				match(SPACE);
				setState(236);
				tagIdentifier();
				setState(238);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SPACE) {
					{
					setState(237);
					match(SPACE);
					}
				}

				setState(240);
				match(COLON);
				setState(242);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SPACE) {
					{
					setState(241);
					match(SPACE);
					}
				}

				setState(244);
				type(0);
				setState(246);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SPACE) {
					{
					setState(245);
					match(SPACE);
					}
				}

				setState(248);
				match(EQUAL);
				setState(250);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SPACE) {
					{
					setState(249);
					match(SPACE);
					}
				}

				setState(252);
				expression(0);
				setState(253);
				match(SPACE);
				setState(255);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==NEWLINE) {
					{
					setState(254);
					match(NEWLINE);
					}
				}

				setState(257);
				match(MINUS);
				setState(258);
				match(SPACE);
				setState(259);
				description();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(261);
				tagName();
				setState(263);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SPACE) {
					{
					setState(262);
					match(SPACE);
					}
				}

				setState(265);
				match(COLON);
				setState(267);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SPACE) {
					{
					setState(266);
					match(SPACE);
					}
				}

				setState(269);
				type(0);
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(271);
				tagName();
				setState(273);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SPACE) {
					{
					setState(272);
					match(SPACE);
					}
				}

				setState(275);
				match(COLON);
				setState(277);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SPACE) {
					{
					setState(276);
					match(SPACE);
					}
				}

				setState(279);
				type(0);
				setState(280);
				match(SPACE);
				setState(282);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==NEWLINE) {
					{
					setState(281);
					match(NEWLINE);
					}
				}

				setState(284);
				match(MINUS);
				setState(285);
				match(SPACE);
				setState(286);
				description();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TagNameContext extends ParserRuleContext {
		public TerminalNode AT() { return getToken(XDocSyntaxParser.AT, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TagNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tagName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XDocSyntaxParserListener ) ((XDocSyntaxParserListener)listener).enterTagName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XDocSyntaxParserListener ) ((XDocSyntaxParserListener)listener).exitTagName(this);
		}
	}

	public final TagNameContext tagName() throws RecognitionException {
		TagNameContext _localctx = new TagNameContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_tagName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(290);
			match(AT);
			setState(291);
			identifier();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TagIdentifierContext extends ParserRuleContext {
		public PropertyTagIdentifierContext propertyTagIdentifier() {
			return getRuleContext(PropertyTagIdentifierContext.class,0);
		}
		public OptionalTagIdentifierContext optionalTagIdentifier() {
			return getRuleContext(OptionalTagIdentifierContext.class,0);
		}
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TagIdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tagIdentifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XDocSyntaxParserListener ) ((XDocSyntaxParserListener)listener).enterTagIdentifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XDocSyntaxParserListener ) ((XDocSyntaxParserListener)listener).exitTagIdentifier(this);
		}
	}
